# poetry-codeartifact-auth

./: .pre-commit-config.yaml  LICENSE  README.md  catalog-info.yaml  poetry_codeartifact_auth.py  poetry_codeartifact_auth_plugin.py  pyproject.toml
.github/workflows/: check.yaml
tests/: test_poetry_codeartifact_auth.py
tests/files/: pyproject.toml
