[tool.poetry]
name = "poetry-codeartifact-auth-plugin"
version = "0.1.0"
description = "Authenticates against AWS CodeArtifact"
authors = ["andy.mackinlay <andy.mackinlay@cultureamp.com>"]
packages = [
  { include = "poetry_codeartifact_auth.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
boto3 = "^1.24.75"
boto3-stubs = {extras = ["codeartifact"], version = "^1.24.75"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.981"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "abstract-method",
  "abstract-class-instantiated",
  "no-member",
  "logging-fstring-interpolation",
  "missing-docstring",
  "too-few-public-methods",
  "f-string-without-interpolation",
]
max-line-length = 110

[tool.mypy]
files = "comment_sentiment_models/**/*.py,entrypoints/*.py"

[[tool.mypy.overrides]]
module = [
  "boto3",
]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
