[tool.poetry]
name = "poetry-codeartifact-auth"
version = "0.1.0"
description = "Authenticates against AWS CodeArtifact"
authors = ["andy.mackinlay <andy.mackinlay@cultureamp.com>"]
packages = [
  { include = "poetry_codeartifact_auth.py" },
]
license = "MIT"

[tool.poetry.scripts]
poetry-ca-auth = "poetry_codeartifact_auth:main"

[tool.poetry.dependencies]
python = "^3.7.2"
python-dotenv = "^0.20.0"
boto3 = "^1.20.0"
boto3-stubs = {extras = ["codeartifact"], version = "^1.20.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.981"
pylint = "^2.15.3"
types-setuptools = "^65.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "logging-fstring-interpolation",
  "too-few-public-methods",
  "f-string-without-interpolation",
]
max-line-length = 110

[tool.mypy]
files = "comment_sentiment_models/**/*.py,entrypoints/*.py"

[[tool.mypy.overrides]]
module = [
  "boto3",
]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
